--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -65,5 +65,14 @@
         "data structure"
       ]
     }
+  },
+  {
+    "question": "What is JavaScript",
+    "answer": "JavaScript is a web development language",
+    "metadata": {
+      "tags": [
+        "js"
+      ]
+    }
   }
 ]
